--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>페스룸</title>
 </head>
 <body>
-    <div>FesRoom</div>
+    <div style="text-align: center;"><img src="/img/Main.png" alt="Main"></div>
+    <!-- <div>FesRoom</div>
     <div>Game Start</div>
-    <div>Exit</div>
+    <div>Exit</div> -->
 </body>
 </html>
