--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>페스룸</title>
 </head>
+
+<style>
+    
+	* {
+		margin: 0;
+		padding: 0;
+	}
+   button {
+		background: yellow;font-size: 24px;display: block;
+        margin: 0 auto;
+        margin-top: 100px; margin-bottom: 100px; 
+	}
+</style>
 <body>
-    <div>FesRoom</div>
+    <strong><div>FesRoom</div></strong>
     <div>Game Start</div>
     <div>Exit</div>
+
+    <form>
+        <input id="start" type='button'text-align: center; value='시작하기'>
+        <input type='button' value='게임설명'>
+        <input type='button' value='종료'>
+    </form>
 </body>
 </html>
