--- a/FesRoom/index.html
+++ b/FesRoom/index.html
@@ -65,7 +65,16 @@
             <span>학교 축제 준비로 한창인 00고등학교. 학생회 부원인 주인공은 학교 축제 위원을 맡게 되었다. 축제 위원으로서 각 부스들을 돌아보던 중, 친구로부터 방탈출 부스 사전 테스트를 해달라는 부탁을 받게되는데…<br>
             조작키 : 마우스</span>
         </a><br>
-        <a href="">종료</a>
+        <a href="javascript:frameclose()">종료</a>
     </p>
+    <script>
+        function frameclose() { 
+        // parent.close() 
+       
+        // window.open('','_self').close();
+
+        self.close() 
+        } 
+    </script>
 </body>
 </html>
